yuzu/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    nokiy.net/cluster-secret-store: "production"
